--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,78 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-n팀</title>
-    <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
-    <!-- bulma css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-    <!-- 폰트 어썸: 아이콘 -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/9daa42bcef.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="home.css" />
-    <script src="home.js" type="module" defer></script>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="home.css">
+  
+</head>
+<body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
-
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
+    <header>
+        <div class="containerHead">
+            <div class="containerBrand">
+                <a href=""></a>
+                <span>15팀</span>
+            </div>
+            <nav class="containerNavbar">
+                <ul class="navBar">
+                    <li><button onclick="goLogin()">로그인</button></li>
+                    <li><button onclick="goRegister()">회원가입</button></li>
+                    <li><button class="search">검색</button></li>
+                    <li><a href="/"><button>장바구니</button></a></li>
+                    
+                </ul>
+                <!-- 제품 검색 데이터 보냄 -->
+                <div class="formDiv">
+                <form method="POST" action="/">
+                  <input type="text" name="searchItem"> 
+                </form>
+                <button class="cancel">X</button>
+              </div>
+            </nav>
         </div>
+    </header>
 
-        <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-          <ul id="navbar">
-            <li><a href="/login">로그인</a></li>
-            <li><a href="/register">회원가입</a></li>
-            <li>
-              <a href="#cart" aria-current="page">
-                <span class="icon">
-                  <i class="fas fa-cart-shopping"></i>
-                </span>
-                <span>카트</span>
-              </a>
-            </li>
+    <!-- 메인1 페이지네이션? -->
+<section>
+<div class="pageContainer">
+
+    
+
+</div>
+
+</section>
+
+<!-- 메인2 상품들 -->
+<section>
+<article class="recommend">
+    <span>이 달의 추천 상품</span>
+</article>
+<div class="containerItem">
+  <!-- 관리자 페이지에서 상품 등록 시 나타날 부분 -->
+    <div onclick="goItem()" class="item">
+      <dl>
+        <dt><img src="./img/mouse.jpg" alt=""></dt>
+        <dd>
+          <ul>
+            <li><span>인체공학 마우스</span> </li>
+            <li><span><strong>15,000</strong> 원</span> </li>
           </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="div-container">
-      <div class="landing" id="landingDiv">
-        <h1>랜딩 페이지</h1>
-      </div>
-      <div class="greeting" id="greetingDiv">
-        <h1>안녕하세요!</h1>
-      </div>
+        </dd>
+      </dl>
     </div>
-  </body>
+
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+</div>
+
+
+</section>
+    
+<!-- 쇼핑물 정보 외 -->
+<footer>
+
+</footer>
+
+</body>
+<script src="home.js"></script>
 </html>
