--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -22,13 +22,13 @@
   padding-left: 15px;
 }
 
-.formDiv{
+/* .formDiv{
   display: none;
 }
 
 .formDiv.active{
   display:inline;
-}
+} */
 
 
 /* 메인 */
