--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -27,9 +27,11 @@
                 <!-- 제품 검색 데이터 보냄 -->
                 <div class="formDiv">
                 <form method="POST" action="/">
-                  <input type="text" name="searchItem"> 
+                  <input type="text" name="searchItem">
+                  <button type="submit" >O</button>
+                  <button type="button" class="cancel">X</button>
                 </form>
-                <button class="cancel">X</button>
+                
               </div>
             </nav>
         </div>
@@ -40,7 +42,6 @@
 <div class="pageContainer">
 
     
-
 </div>
 
 </section>
