--- a/src/views/admin/admin.css
+++ b/src/views/admin/admin.css
@@ -1,3 +1,63 @@
-li{
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+  }
+  
+  :root{
+  
+  }
+  
+  .containerHead{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .navBar{
     list-style: none;
-}
+    display: flex;
+  }
+  
+  .navBar li{
+    padding-left: 15px;
+  }
+  
+  .formDiv{
+    display: none;
+  }
+  
+  .formDiv.active{
+    display:inline;
+  }
+  
+  
+  /* 메인 */
+  .recommend{
+    font-size: 22px;
+    padding: 40px 0px 20px 20px;;
+  }
+  
+  .containerItem{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,minmax(350px,auto));
+  }
+  
+  
+  .navBar li{
+    padding-left: 15px;
+  }
+  
+  .formDiv{
+    display: none;
+  }
+  
+  .formDiv.active{
+    display:inline;
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+  }
