--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -4,80 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="admin.css">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  </head>
-  <body>
     <title>Document</title>
-
+    <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-    <div class="adminContainer">
-        <!-- <ul>
-            <li>
-                <label for="title">제품명</label>
-                <input type="text" id="title" name="title">
-            </li>
-            <li>
-                <label for="category">카테고리</label>
-                <input type="text" id="category" name="category">
-            </li>
-            <li>
-                <label for="manufacture">제조사</label>
-                <input type="text" id="manufacture" name="manufacture">
-            </li>
-            <li>
-                <label for="price">가격</label>
-                <input type="text" id="price" name="price">
-            </li>
-            <li>
-                <label for="description">설명</label>
-                <input type="text" id="description" name="description">
-            </li> -->
-            <form action="http://localhost:3000/api/products" method="POST" enctype="multipart/form-data">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">제품명</span>
-                <input type="text" name="title" class="title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+      <!-- 헤더 -->
+      <header>
+        <div class="containerHead">
+            <div class="containerBrand">
+                <a href=""></a>
+                <span>15팀</span>
+            </div>
+            <nav class="containerNavbar">
+                <ul class="navBar">
+                    <li><button onclick="">로그아웃</button></li>
+                    <!-- <li><button onclick=""></button></li> -->
+                    <!-- <li><button class="search">검색</button></li> -->       
+                </ul>
+                <!-- 제품 검색 데이터 보냄 -->
+                <!-- <div class="formDiv">
+                <form method="POST" action="/">
+                  <input type="text" name="searchItem"> 
+                </form>
+                <button class="cancel">X</button>
               </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">카테고리</span>
-                <input type="text" name="categoryId" class="category" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">제조사</span>
-                <input type="text" name="manufacturer" class="manufacture" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">가격</span>
-                <input type="text" name="price" class="price" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">설명</span>
-                <input type="text" name="description" class="description" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              </div>
-            <div class="mb-3">
-                <label for="formFile" class="form-label">썸네일</label>
-                <input class="form-control" class="thumbanil" name="image" type="file" id="formFile">
-              </div>
-              <!-- <div class="mb-3">
-                <label for="formFile" class="form-label">이미지1</label>
-                <input class="form-control" class="images" name="images" type="file" id="formFile">
-              </div>
-              <div class="mb-3">
-                <label for="formFile" class="form-label">이미지2</label>
-                <input class="form-control" class="images" name="images" type="file" id="formFile">
-              </div>
-              <div class="mb-3">
-                <label for="formFile" class="form-label">이미지3</label>
-                <input class="form-control" class="images" name="images" type="file" id="formFile">
-              </div> -->
-              <input type="submit" value="등록">
-            </form>
-            <button class="btn">등록</button>
-                
-    </div>
-</form>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+            </nav>
+        </div>
+    </header> -->
+
+<!-- 상품 목록 리스트 -->
+<section class="itemList">
+    
+
+
+
+</section>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
-<script src="admin.js"></script>
 </html>
