--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -74,8 +74,21 @@
             </div>
 
             <div class="field">
-
+                <label class="label" for="telInput">전화번호</label>
+                <div class="control">
+                    <input class="input" id="telInput" type="tel" placeholder="010-0000-0000" autocomplete="on" />
+                </div>
             </div>
+
+            <div class="field">
+                <label class="label" for="adressInput">주소</label>
+                <div class="control">
+                    <input class="input" id="addressZipInput" type="tel" placeholder="우편 변호" autocomplete="on" />
+                    <input class="input" id="addressBasicInput" type="tel" placeholder="기본 주소" autocomplete="on" />
+                    <input class="input" id="addressOptionInput" type="tel" placeholder="상세 주소" autocomplete="on" />
+                </div>
+            </div>
+
 
             <div class="field">
                 <label class="label" for="passwordInput">비밀번호</label>
