--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -21,26 +21,17 @@
                     <!-- <li><button onclick=""></button></li> -->
                     <!-- <li><button class="search">검색</button></li> -->       
                 </ul>
-                <!-- 제품 검색 데이터 보냄 -->
-                <!-- <div class="formDiv">
-                <form method="POST" action="/">
-                  <input type="text" name="searchItem"> 
-                </form>
-                <button class="cancel">X</button>
-              </div>
-            </nav>
-        </div>
-    </header> -->
+            </div>
+        </header> 
+             
 
 <!-- 상품 목록 리스트 -->
-<section class="itemList">
-    
+<div class="itemList">
 
 
+</div>
 
-</section>
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+<script src="admin.js"> </script>
 </html>
