--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -31,19 +31,32 @@
 #plus {
   font-size: 20px;
   padding: 0 10px;
-}
-
-#minus,
-#plus {
-  background-color: gainsboro;
   border-radius: 50%;
 }
 
-#sub #description {
-  font-size: 10px;
+#minus {
+  margin: 0;
+  margin-right: 10px;
+}
+
+#minus:hover {
+  cursor: pointer;
+}
+
+#plus {
+  margin: 0;
+  margin-left: 10px;
+}
+
+#plus:hover {
+  cursor: pointer;
+}
+
+#description {
+  font-size: 17px;
 }
 
 #count {
-  padding: 0 20px;
-  width: 20px;
+  padding-left: 18px;
+  width: 50px;
 }
