--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -30,7 +30,8 @@
                     <span class="has-text-link">쇼핑-데모</span>
                 </a>
 
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                    data-target="navbarBasicExample">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -44,8 +45,8 @@
                         <li>
                             <a href="/cart" aria-current="page">
                                 <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
+                                    <i class="fas fa-cart-shopping"></i>
+                                </span>
                                 <span>카트</span>
                             </a>
                         </li>
@@ -100,13 +101,14 @@
             <div class="field mb-5">
                 <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
                 <div class="control">
-                    <input class="input" id="passwordConfirmInput" type="password" placeholder="********" autocomplete="off" />
+                    <input class="input" id="passwordConfirmInput" type="password" placeholder="********"
+                        autocomplete="off" />
                 </div>
             </div>
 
             <button class="button is-primary is-fullwidth" id="submitButton">
-          회원가입하기
-        </button>
+                회원가입하기
+            </button>
         </form>
     </div>
 </body>
