--- a/src/views/admin/admin.css
+++ b/src/views/admin/admin.css
@@ -49,7 +49,7 @@
     padding-left: 15px;
   }
   
-  a {
+  .a{
     text-decoration: none;
     color: black;
   }
@@ -60,6 +60,8 @@
     display: flex;
     justify-content: center;
     border: solid rgb(114, 113, 113) 0.5px;
+
+    
   }
 
   ul{
@@ -73,5 +75,10 @@
     height: 200px;
   }
 
+.btn-outline-secondary{
+  margin: 50px 0px 40px 1020px;
+}
 
-
+.btn-outline-danger{
+    margin: 8px 3px;
+}
