--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="admin.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
       <!-- 헤더 -->
@@ -24,14 +25,16 @@
             </div>
         </header> 
              
-
 <!-- 상품 목록 리스트 -->
 <div class="itemList">
 
-
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<button onclick="goPost()" type="button" class="btn btn-outline-secondary">추가</button>
+
+
+
+
 </body>
 <script src="admin.js"> </script>
 </html>
