feat: add product to cart

--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -156,5 +156,6 @@
     ></script>
     <script src="/renderingNav.js"></script>
     <script src="product-detail.js"></script>
+    <script src="handle-cart.js"></script>
   </body>
 </html>
