--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -47,7 +47,7 @@
         <label for="formFile" class="form-label">썸네일</label>
         <input class="form-control thumbanil" id="formFile" name="image" type="file" id="formFile">
       </div>
-      <input type="submit" value="등록">
+      <input id="btnInput" type="submit" value="등록">
     </form>
     <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
   </div>
