--- a/src/views/mypage_info/mypage_info.html
+++ b/src/views/mypage_info/mypage_info.html
@@ -65,39 +65,39 @@
             <p class="title is-5 has-text-primary">내 정보 확인</p>
             <div class="field">
                 <label class="label" name="fullName">이름
-                    <input class="input able-when-edit" name="fullName" type="text" placeholder="유재석" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="fullName" id="fullNameInput" type="text" placeholder="유재석" autocomplete="on" disabled/>
                 </label>
             </div>
 
             <div class="field">
                 <label class="label" name="email">이메일
-                    <input class="input able-when-edit" name="email" type="email" placeholder="abc@example.com" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="email" id="emailInput" type="email" placeholder="abc@example.com" autocomplete="on" disabled/>
                 </label>
             </div>
 
             <div class="field">
                 <label class="label" name="phoneNumber">전화번호
-                    <input class="input able-when-edit" name="phoneNumber" type="tel" placeholder="010-0000-0000" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="phoneNumber" id="phoneNumberInput" type="tel" placeholder="010-0000-0000" autocomplete="on" disabled/>
                 </label>
             </div>
 
             <div class="field">
                 <label class="label" name="address">주소
-                    <input class="input able-when-edit" name="postalCode" type="number" placeholder="우편 변호" autocomplete="on" disabled/>
-                    <input class="input able-when-edit" name="address1" type="text" placeholder="기본 주소" autocomplete="on" disabled/>
-                    <input class="input able-when-edit" name="address2" type="text" placeholder="상세 주소" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="postalCode" id="postalCodeInput" type="tel" placeholder="우편 변호" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="address1" id="address1Input" type="text" placeholder="기본 주소" autocomplete="on" disabled/>
+                    <input class="input able-when-edit" name="address2" id="address2Input" type="text" placeholder="상세 주소" autocomplete="on" disabled/>
                 </label>
             </div>
 
             <div class="field hidden-until-edit">
                 <label class="label" name="password">비밀번호
-                    <input class="input" name="password" type="password" placeholder="********" autocomplete="off" />
+                    <input class="input" name="password" id="passwordInput" type="password" placeholder="********" autocomplete="off" />
                 </label>
             </div>
 
             <div class="field hidden-until-edit mb-5">
                 <label class="label" name="passwordConfirm">비밀번호 확인
-                    <input class="input" name="passwordConfirm" type="password" placeholder="********" autocomplete="off" />
+                    <input class="input" name="passwordConfirm" id="passwordConfirmInput" type="password" placeholder="********" autocomplete="off" />
                 </label>
             </div>
 
