--- a/src/views/mypage_info/mypage_info.html
+++ b/src/views/mypage_info/mypage_info.html
@@ -30,7 +30,8 @@
                     <span class="has-text-link">쇼핑-데모</span>
                 </a>
 
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                    data-target="navbarBasicExample">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -44,8 +45,8 @@
                         <li>
                             <a href="/cart" aria-current="page">
                                 <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
+                                    <i class="fas fa-cart-shopping"></i>
+                                </span>
                                 <span>카트</span>
                             </a>
                         </li>
@@ -58,7 +59,8 @@
     <!--마이페이지 회원정보 폼(Form) -->
     <div class="mypage-nav">
         <button class="button is-primary" id="mypageNavInfoButton">내 정보 확인/수정</button>
-        <button class="button is-primary" id="mypageNavOrderButton" onclick="location.href='/mypage/order'">주문 정보</button>
+        <button class="button is-primary" id="mypageNavOrderButton" onclick="location.href='/mypage/order'">주문
+            정보</button>
     </div>
     <div class="register-user-form-container">
         <form class="box register-user-form-box" id="registerUserForm">
@@ -66,14 +68,15 @@
             <div class="field">
                 <label class="label" for="fullNameInput">이름</label>
                 <div class="control">
-                    <input class="input" id="fullNameInput" type="text" placeholder="유재석" autocomplete="on" disabled/>
+                    <input class="input" id="fullNameInput" type="text" placeholder="유재석" autocomplete="on" disabled />
                 </div>
             </div>
 
             <div class="field">
                 <label class="label" for="emailInput">이메일</label>
                 <div class="control">
-                    <input class="input" id="emailInput" type="email" placeholder="abc@example.com" autocomplete="on" disabled/>
+                    <input class="input" id="emailInput" type="email" placeholder="abc@example.com" autocomplete="on"
+                        disabled />
                 </div>
             </div>
 
@@ -87,7 +90,8 @@
             <div class="field hidden-untill-edit mb-5">
                 <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
                 <div class="control">
-                    <input class="input" id="passwordConfirmInput" type="password" placeholder="********" autocomplete="off" />
+                    <input class="input" id="passwordConfirmInput" type="password" placeholder="********"
+                        autocomplete="off" />
                 </div>
             </div>
 
