--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -1,160 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="product-detail.css" />
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
-      id="nav"
-    ></nav>
-    <div class="container">
-      <div class="container-fluid text-center">
-        <div class="row mt-4">
-          <div class="col-12"><h2>상품 상세 정보</h2></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="product-detail.css" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly" id="nav"></nav>
+  <div class="container">
+    <div class="container-fluid text-center">
+      <div class="row mt-4">
+        <div class="col-12">
+          <h2>상품 상세 정보</h2>
         </div>
-        <div class="row mt-4">
-          <div class="col-1"></div>
-          <div class="col-10" id="imageContainer">
-            <div class="card mb-3">
-              <div class="row g-0 p-3">
-                <div class="col-md-6 p-2">
-                  <img
-                    src=""
-                    class="img-fluid rounded-start w-100"
-                    id="image"
-                  />
+      </div>
+      <div class="row mt-4">
+        <div class="col-1"></div>
+        <div class="col-10" id="imageContainer">
+          <div class="card mb-3">
+            <div class="row g-0 p-3">
+              <div class="col-md-6 p-2">
+                <img src="" class="img-fluid rounded-start w-100" id="image" />
+              </div>
+              <div class="col-md-6">
+                <div class="card-body m-0 p-2">
+                  <div class="card">
+                    <h5 class="card-header text-start product-title p-2" id="main">
+                      상품명
+                    </h5>
+                    <div class="card-body p-1">
+                      <p class="card-title text-start m-0 ms-3 sub" id="title"></p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        상품명
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="title"
-                        ></p>
-                      </div>
+                <div class="card-body m-0 p-2">
+                  <div class="card">
+                    <h5 class="card-header text-start product-title p-2" id="main">
+                      가격
+                    </h5>
+                    <div class="card-body p-1">
+                      <p class="card-title text-start m-0 ms-3 sub" id="price"></p>
                     </div>
                   </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        가격
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="price"
-                        ></p>
-                      </div>
+                </div>
+                <div class="card-body m-0 p-2">
+                  <div class="card">
+                    <h5 class="card-header text-start product-title p-2" id="main">
+                      카테고리
+                    </h5>
+                    <div class="card-body p-1">
+                      <p class="card-title text-start m-0 ms-3 sub" id="category"></p>
                     </div>
                   </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        카테고리
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="category"
-                        ></p>
-                      </div>
+                </div>
+                <div class="card-body m-0 p-2">
+                  <div class="card">
+                    <h5 class="card-header text-start product-title p-2" id="main">
+                      제조사
+                    </h5>
+                    <div class="card-body p-1">
+                      <p class="card-title text-start m-0 ms-3 sub" id="manufacturer"></p>
                     </div>
                   </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        제조사
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="manufacturer"
-                        ></p>
-                      </div>
+                </div>
+                <div class="card-body m-0 p-2">
+                  <div class="card">
+                    <h5 class="card-header text-start product-title p-2" id="main">
+                      제품 소개
+                    </h5>
+                    <div class="card-body p-1">
+                      <p class="card-title text-start m-0 ms-3 sub" id="description"></p>
                     </div>
                   </div>
-                  <div class="card-body m-0 p-2">
-                    <div class="card">
-                      <h5
-                        class="card-header text-start product-title p-2"
-                        id="main"
-                      >
-                        제품 소개
-                      </h5>
-                      <div class="card-body p-1">
-                        <p
-                          class="card-title text-start m-0 ms-3 sub"
-                          id="description"
-                        ></p>
-                      </div>
-                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mx-3">
+                  <div class="d-flex h-100">
+                    <p class="btn btn-primary" id="minus">-</p>
+                    <input type="text" value="1" class="m-0" id="count" data-id="" />
+                    <p class="btn btn-primary" id="plus">+</p>
                   </div>
-                  <div
-                    class="d-flex justify-content-between align-items-center mx-3"
-                  >
-                    <div class="d-flex h-100">
-                      <p class="btn btn-primary" id="minus">-</p>
-                      <input
-                        type="text"
-                        value="1"
-                        class="m-0"
-                        id="count"
-                        data-id=""
-                      />
-                      <p class="btn btn-primary" id="plus">+</p>
-                    </div>
-                    <button class="btn btn-primary me-5" id="addCart">
-                      장바구니 담기
-                    </button>
-                    <a
-                      class="btn btn-danger ms-5"
-                      href="javascript:history.back()"
-                      >더 둘러보기</a
-                    >
-                  </div>
+                  <button class="btn btn-primary me-5" id="addCart">
+                    장바구니 담기
+                  </button>
+                  <a class="btn btn-danger ms-5" href="javascript:history.back()">더 둘러보기</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-1"></div>
         </div>
+        <div class="col-1"></div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/renderingNav.js"></script>
-    <script src="product-detail.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <script src="/renderingNav.js"></script>
+  <script src="product-detail.js"></script>
+</body>
+
 </html>
