--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -27,10 +27,11 @@
                 </ul>
         </div>
     </header>
+    <!-- 카테고리 조회 -->
     <div>
         <form id="form">
-            <select name="categoryId" class="form-select form-select-sm" aria-label=".form-select-sm example">
-
+            <select name="categoryId" class="form-select form-select-sm" aria-label=".form-select-sm example" id="select">
+                <option value="full" selected>전체</option>
             </select>
         </form>
     </div>
