--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-</head>
+    <link rel="stylesheet" href="home.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- 헤더 -->
-    <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly" id="nav"></nav>
+    <nav
+      class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
+      id="nav"
+    ></nav>
     <!-- <div class="containerHead">
             <div class="containerBrand">
                 <a href=""></a>
@@ -39,46 +45,34 @@
             </nav>
         </div> -->
 
-
-
     <!-- 메인1 페이지네이션? -->
     <section>
-        <div class="pageContainer">
-
-
-        </div>
-
+      <div class="pageContainer"></div>
     </section>
 
     <!-- 메인2 상품들 -->
     <section>
-        <article class="recommend">
-            <span>이 달의 추천 상품</span>
-        </article>
+      <article class="recommend">
+        <span>이 달의 추천 상품</span>
+      </article>
 
-        <div class="containerItem">
-            <!-- 관리자 페이지에서 상품 등록 시 나타날 부분 -->
-            <div class="item"></div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-            <div class="item">4</div>
-            <div class="item">5</div>
-            <div class="item">6</div>
-            <div class="item">7</div>
-            <div class="item">8</div>
-            <div class="item">9</div>
-        </div>
-
-
+      <div class="containerItem">
+        <!-- 관리자 페이지에서 상품 등록 시 나타날 부분 -->
+        <div class="item"></div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">7</div>
+        <div class="item">8</div>
+        <div class="item">9</div>
+      </div>
     </section>
 
     <!-- 쇼핑물 정보 외 -->
-    <footer>
-
-    </footer>
-
-</body>
-<script src="home.js"></script>
-<script src="/renderingNav.js"></script>
-
+    <footer></footer>
+  </body>
+  <script src="home.js"></script>
+  <script src="/renderingNav.js"></script>
 </html>
