--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -15,64 +15,30 @@
   </head>
 
   <body>
-    <!-- 헤더 -->
     <nav
       class="navbar navbar-expand-lg bg-light d-flex justify-content-evenly"
       id="nav"
     ></nav>
-    <!-- <div class="containerHead">
-            <div class="containerBrand">
-                <a href=""></a>
-                <span>15팀</span>
-            </div>
-            <nav class="containerNavbar">
-                <ul class="navBar">
-                    <li><button onclick="goLogin()">로그인</button></li>
-                    <li><button onclick="goRegister()">회원가입</button></li>
-                    <li><button class="search">검색</button></li>
-                    <li><a href="/"><button>장바구니</button></a></li>
-
-                </ul>
-              
-                <div class="formDiv">
-                    <form method="POST" action="/">
-                        <input type="text" name="searchItem">
-                        <button type="submit">O</button>
-                        <button type="button" class="cancel">X</button>
-                    </form>
-
-                </div>
-            </nav>
-        </div> -->
-
-    <!-- 메인1 페이지네이션? -->
-    <section>
-      <div class="pageContainer"></div>
-    </section>
 
     <!-- 메인2 상품들 -->
     <section>
-      <article class="recommend">
-        <span>이 달의 추천 상품</span>
+      <article class="recommend text-center">
+        <span class="">이 달의 추천 상품(뺄 수도 있음)</span>
       </article>
 
-      <div class="containerItem">
-        <!-- 관리자 페이지에서 상품 등록 시 나타날 부분 -->
-        <div class="item"></div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
+      <div class="productContainer container mt-5">
+        <div class="container-fluid text-center">
+          <div
+            class="row d-flex justify-content-evenly w-90"
+            id="productContainer"
+          ></div>
+        </div>
       </div>
     </section>
-
-    <!-- 쇼핑물 정보 외 -->
-    <footer></footer>
+    <section>
+      <div class="pageContainer"></div>
+    </section>
+    <script src="home.js"></script>
+    <script src="/public/js/template-renderer.js"></script>
   </body>
-  <script src="home.js"></script>
-  <script src="/renderingNav.js"></script>
 </html>
